--- a/src/App.css
+++ b/src/App.css
@@ -660,6 +660,21 @@ body {
   padding: 50px;
   height: 100%;
   margin-top: 70px;
+  margin: 70px 40px 0 40px;
+}
+
+.cartBtn{
+  background-color: #fff;
+  padding: 15px;
+  border-radius: 20px;
+  border: 1px solid black;
+  width: 100px;
+  margin: auto;
+}
+
+.cartInfo{
+  color: white;
+  font-size: 1.5rem;
 }
 
 .cartItemContainer{
@@ -684,6 +699,13 @@ body {
   width: 100%;
 }
 
+.cartItemButtons button{
+  padding: 10px;
+  margin: 5px;
+  border: solid 1px black;
+  border-radius: 10px;
+  background-color: #ed0c0c76;
+}
 
 /* MODAL */
 
