--- a/src/App.css
+++ b/src/App.css
@@ -733,6 +733,7 @@ body {
   background-color: #fff;
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  gap: 40px 0;
 }
 
 .modalForm {
@@ -748,26 +749,39 @@ body {
   padding: 5px;
   border: none;
   border-bottom: 2px solid #ccc;
-  width: 100%;
+  width: 70%;
 }
 
 .modalButtonContainer {
   width: 100%;
   display: flex;
-  justify-content: flex-end;
+  gap: 0 10px;
+  justify-content: center;
   margin-top: 20px;
 }
 
-.modalButton {
+.modalButton-buy {
   padding: 10px 20px;
-  background-color: #000;
+  background-color: #31852d;
   color: #fff;
   border: none;
   border-radius: 5px;
   cursor: pointer;
 }
 
-.modalButton:hover {
+.modalButton-back {
+  padding: 10px 20px;
+  background-color: #5f625f;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.modalButton-buy:hover {
+  background-color: #36b42f;
+}
+.modalButton-back:hover {
   background-color: #333;
 }
 
@@ -782,8 +796,9 @@ body {
 
 .contactForm{
   width: 600px;
-  background-color: #eee;
+  background-color: #c08860bb;
   padding: 30px;
+  border-radius: 20px;
 }
 
 /* FOOTER */
